--- a/muensterdiscovery/src/i18n/sa.json
+++ b/muensterdiscovery/src/i18n/sa.json
@@ -143,7 +143,155 @@
     "playroute.nav.action.continue": "تابع مستقيماً",
     "playroute.nav.action.turn_left": "انعطف يساراً",
     "playroute.nav.action.turn_right": "انعطف يميناً",
-    "playroute.nav.action.arrive": "وصلت للوجهة"
+    "playroute.nav.action.arrive": "وصلت للوجهة",
+
+    "poi.1": "القلعة هي مجمع مبان في مدينة مونستر. تم بناء المبنى على شكل حرف U. امام القلعة توجد ساحة، وفي الخلف توجد الحديقة النباتية في مونستر. تستخدم القلعة كمبنى اداري لجامعة مونستر وتضم قاعات محاضرات وغرف ندوات.",
+    "poi.2": "تاخذ كنيسة اوبرفاسر اسمها من موقعها. عند النظر اليها من كاتدرائية القديس بولس يجب عبور الماء اي نهر اا للوصول اليها. تعد كنيسة اوبرفاسر من اقدم الكنائس، اذ كان هناك مبنى سابق لها في اواخر القرن التاسع. وقد وجدت بشكلها الحالي منذ القرن الخامس عشر، رغم انها تعرضت لاعادة ترميم واسعة بعد تدميرها في الحرب العالمية الثانية.",
+    "poi.3": "ساحة دومبلاتس هي الساحة المفتوحة امام كاتدرائية القديس بولس. حتى عام 1916 كان يقام فيها مهرجان زيند ثلاث مرات في السنة، ثم انتقل لاحقا الى ساحة القلعة. اليوم تستضيف دومبلاتس سوقا اسبوعيا كل يوم اربعاء وجمعة حيث يمكن شراء المواد الغذائية الطازجة والزهور.",
+    "poi.4": "كاتدرائية القديس بولس هي الكنيسة الام لابرشية مونستر وقد بنيت في القرن الثالث عشر. تحتوي الكاتدرائية على صحن وجناح عرضي، كما تضم العديد من الاعمال الفنية.",
+    "poi.6": "كان كيبنكيرل تاجرا صغيرا ينقل البضائع اليومية بين الريف والمدينة باستخدام كيب وهي سلة تحمل على الظهر. اليوم يعتبر كيبنكيرل شخصية تقليدية في مونستر والمناطق المحيطة بها.",
+    "poi.7": "يقع سوق روغن ماركت في برينتسيبال ماركت، ويعد مع سوق السمك القديم من اقدم الاسواق في مونستر. حصل على اسمه من تجارة الجاودار. توجد العديد من منازل التجار التاريخية، والتي دمر معظمها خلال الحرب العالمية الثانية. المنزل الظاهر في الصورة يحتفظ بواجهته الاصلية التي يمكن التعرف عليها من خلال الزخارف الغنية والمصاريع.",
+    "poi.8": "يقع سوق روغن ماركت في برينتسيبال ماركت، ويعد مع سوق السمك القديم من اقدم الاسواق في مونستر. حصل على اسمه من تجارة الجاودار. توجد العديد من منازل التجار التاريخية، والتي دمر معظمها خلال الحرب العالمية الثانية. المنزل الظاهر في الصورة يحتفظ بواجهته الاصلية التي يمكن التعرف عليها من خلال الزخارف الغنية والمصاريع.",
+    "poi.9": "بنيت كنيسة القديس لامبرت بشكلها الحالي في القرنين الرابع عشر والخامس عشر على الطراز القوطي المتاخر. تاثرت مونستر لعدة سنوات بحركة المعمدانيين، وتم اعدام قادتهم الثلاثة بعد استعادة السلطة من خلال تعليقهم في اقفاص وتركهم حتى الموت. لا تزال الاقفاص الثلاثة الاصلية معلقة على الجدار الجنوبي للكنيسة حتى اليوم.",
+    "poi.10": "يقع مبنى البلدية التاريخي في برينتسيبال ماركت واكتسب شهرة خاصة من خلال مفاوضات صلح وستفاليا في مونستر واوسنابروك، التي انهت حرب الثلاثين عاما في اوروبا عام 1648. دمر المبنى خلال الحرب العالمية الثانية واعيد بناؤه عام 1958.",
+    "poi.11": "شارع زالتس شتراسه هو اقدم طريق تجاري في مونستر وهو اليوم منطقة للمشاة. من مميزاته الاحجار المحاطة بالنحاس من جميع مدن الرابطة الهانزية، والتي ادرجت في الارض عام 1993. كم حجرا يمكنك العثور عليه؟",
+    "poi.12": "بني قصر اربدروستنهوف بين عامي 1753 و1757 وصممه يوهان كونراد شلاون، وهو نفس المهندس الذي صمم القلعة. يعد قصرا نبيلا على الطراز الباروكي وكان مخصصا لكبار موظفي المدينة. اليوم يستخدم لاقامة الفعاليات الثقافية والعلمية مثل المحاضرات والحفلات وتسليم الجوائز.",
+    "poi.13": "تاسس متحف المدينة عام 1979 وافتتح عام 1982 بمعرض عن المعمدانيين. انتقل الى مبناه الحالي عام 1989. يعرض تاريخ مدينة مونستر ويستضيف ايضا معارض مؤقتة.",
+    "poi.14": "تم بناء الكنيس الجديد الحالي عام 1961. كان الكنيس القديم قائما في نفس الموقع لكنه دمر خلال ليلة الكريستال عام 1938.",
+    "poi.15": "تاسست الحديقة النباتية عام 1803 لاغراض البحث والتعليم. كما تلعب دورا مهما في التنوع البيولوجي والحفاظ على الانواع. يستخدمها سكان مونستر للاسترخاء والهدوء، وتقام احيانا جولات ارشادية.",
+    "poi.16": "كافيه فام هو مقهى وبار منذ عام 2018. يعد مكانا لتناول الافطار او الغداء او القهوة الهادئة مع خبز وكعك محضرين في المنزل.",
+    "poi.17": "لا تييندا هي جمعية تاسست عام 1993 وتعتمد على العمل التطوعي. اهدافها الرئيسية بيع منتجات التجارة العادلة، والعمل التعليمي، وزيادة الوعي العام. تستثمر الارباح في التعليم.",
+    "poi.18": "هذه مكتبة عامة مفتوحة للجميع. يمكنك اخذ كتاب واحد لكن عليك وضع كتاب اخر مكانه. انها فرصة جميلة للقراءة وتبادل الكتب.",
+    "poi.19": "تاسس المتجر عام 1994 ويقدم منتجات تاتي بشكل اساسي من ايطاليا وفرنسا والبرتغال، وكذلك من تونس.",
+    "poi.20": "متجر لطيف يبيع منتجات من فنانين وباعة مختلفين. المميز فيه ان لكل فنان زاويته الخاصة. تشمل المنتجات اكسسوارات وطعاما ومشروبات كحولية وادوات منزلية وديكورا.",
+    "poi.21": "متجر يبيع بشكل رئيسي ملابس من التجارة العادلة مصنوعة من اقمشة عالية الجودة.",
+    "poi.22": "متجر صغير يبيع بشكل اساسي الشاي وادواته، كما يمكن العثور فيه على منتجات مطبخ يابانية.",
+    "poi.23": "متجر يبيع ملابس وديكورا واكسسوارات، بعضها نباتي او مصنوع يدويا او منتج بعدل.",
+    "poi.24": "متجر يبيع منتجات محلية مثل المشروبات والكحول والديكور وتذكارات مونستر والقرطاسية والوجبات الخفيفة. يقدم الموظفون نصائح ودية ومهذبة.",
+    "poi.25": "سوبرماركت عضوي يقع في الطابق السفلي من الاركادن. مناسب للحصول على وجبة خفيفة اثناء التواجد في المدينة.",
+    "poi.26": "متجر ملابس مشابه لمتجر غرونه فيزه، يقدم ملابس مصنوعة من اقمشة عالية الجودة.",
+    "poi.27": "مطعم نباتي يقدم طعاما لذيذا مع طاقم عمل ودود.",
+    "poi.28": "كرات البلياردو العملاقة كانت مشروعا نحتيا للفنان كلايس اولدينبرغ عام 1977. كانت في الاصل بيضاء، لكن يتم طلاؤها مرارا من قبل فنانين او اشخاص عشوائيين ثم يعاد طلاؤها باللون الابيض.",
+    "poi.29": "مونستر مدينة الدراجات وستبقى كذلك. واجهة متجر اي موشن تعرض زخرفة على شكل دراجة.",
+    "poi.30": "استلهم الفنان هوانغ يونغ بينغ عمله في مونستر من عمل دوشان رف الزجاجات ومن تمثال المسيح في كنيسة القديس لودغيري. بدلا من الزجاجات، تزين الرف ستة امتار بخمسين ذراعا منحوتا تشير الى الالهة البوذية غوانيين.",
+    "poi.31": "جرس صغير يمكن تفويته بسهولة بسبب موقعه على واجهة مبنى. توجد عناصر موسيقية يوميا في اوقات محددة.",
+    "poi.32": "بالقرب من الكنيس يقف تمثال للفنان اوتو فرويندليش، وهو فنان يهودي شيوعي ولد عام 1878 وقتل عام 1943 في معسكر اعتقال نازي.",
+    "poi.33": "مخبز مريح يقدم القهوة والكعك. يتميز مخبز شرونتس بتصميم جداري خاص في منطقة الجلوس.",
+    "poi.34": "بالقرب من موقف الحافلات في شارع ايزن بان شتراسه توجد خمسة صناديق كهرباء تحولت الى قرود.",
+    "poi.35": "تقع الموجة مباشرة على ممشى الميناء. الواجهة تعود الى استوديو باور سبورتس للياقة البدنية.",
+    "poi.36": "التصميم الداخلي لمطعم كولتي كباب مستوحى من برلين والغرافيتي.",
+    "poi.37": "يظهر على هذا الجدار مصارعون مكسيكيون مقنعون يتقاتلون بنظرات حادة.",
+    "poi.38": "لوحة خداع بصري تظهر مرآبا توجد بداخله سيارة فولكس فاغن قديمة.",
+    "poi.39": "ثلاثة قرود صغيرة لطيفة تعيش على اطراف مونستر.",
+    "poi.40": "الملاذ مكان مقدس ومحمي مثل الكنيسة او المعبد. ملاذ مونستر يتكون من جدار دائري من الطوب دون مدخل. خاصة في الصيف يعد مكانا مثاليا للاسترخاء.",
+    "poi.41": "تم تصميم المبنى الجديد لمكتبة الابرشية في وسط مونستر من قبل المهندس المعماري ماكس دودلر وافتتح في ديسمبر 2005. المبنى يبلغ طوله حوالي سبعين مترا ويشبه رف كتب ضخم. تفصل المكتبة عن المبنى السابق للمعهد الكهنوتي والذي يعرف اليوم باسم ليدغيرهاوس زقاق بعرض عشرة امتار يسمى زقاق المكتبة.",
+    "poi.42": "يعرض المتحف اعمالا فنية من العصور الوسطى المبكرة حتى الوقت الحاضر. يضم اكثر من ثلاثمائة الف قطعة. تشمل المجموعات التاريخية اعمالا فنية من المنطقة والمناطق المجاورة. يمكن للزوار ايضا مشاهدة بقايا الجدران القديمة للمبنى السابق.",
+    "poi.43": "بعد الحرب العالمية الثانية استخدم هذا الموقع لفترة طويلة كموقف سيارات. بعد مسابقة معمارية تم بناء مركز حديث للاعمال والمكاتب والسكن عام 1976. كما تم بناء ملجا وقائي يمكنه استيعاب ثلاثة الاف شخص.",
+    "poi.44": "تشكل المباني الستة المتصلة معا ممر عبور عام بين شارع روثنبورغ المزدحم ومنطقة المشاة في شارع لودغيري من خلال ممر كبير من ثلاثة الى اربعة طوابق. يمكن هنا التسوق في متاجر متنوعة او زيارة متحف بيكاسو.",
+    "poi.45": "شارع شتوبنغاسه معروف في مونستر منذ العصور الوسطى. يعود الاسم الى بيوت الاستحمام التي كانت موجودة هنا. اليوم يعد المكان مسرحا لفناني الشوارع ونقطة تجمع للمظاهرات والموسيقيين.",
+    "poi.46": "كنيسة كليمنس هي كنيسة دير ومستشفى على الطراز الباروكي بنيت بين عامي 1745 و1753 لاخوة الرحمة وفقا لمخططات يوهان كونراد شلاون. تم حل الدير عام 1811.",
+    "poi.47": "تم بناء مكتبة المدينة بين عامي 1991 و1993. المميز هو الممر الذي يمر عبر وسط المبنى ويوفر مشاهد مثيرة. تمثل المنحوتة في نهاية الممر انفتاح العمارة. تجمع المكتبة بين التقاليد والحداثة كمكان للمعرفة واللقاء.",
+    "poi.48": "افتتح مسرح مونستر في الرابع من فبراير 1956 كاول مبنى مسرح كبير جديد في المانيا بعد الحرب العالمية الثانية. تعود جذوره الى عام 1774. في عام 1971 اضيفت خشبة مسرح ثانية.",
+    "poi.49": "تم بناء الزفينغر في القرن السادس عشر كجزء من تحصينات المدينة. استخدم عبر تاريخه كحصن وسجن وطاحونة خيول ومرسم فنان. في عام 1997 تم تحويله الى نصب تذكاري لضحايا العنف.",
+    "poi.50": "تم بناء سينما شلوس تياتر عام 1953 وهي مبنى محمي. تضم اول نادي سينما في المانيا. تم تجديدها عام 1995 على طراز مسارح عشرينيات القرن الماضي. تركز اليوم على الافلام الفنية الاوروبية.",
+    "poi.51": "تقع كنيسة الصليب المقدس في قلب حي كرويتسفيرتل وبنيت بين عامي 1899 و1902. من المميزات تركيب كلمات نعم انا هنا على جوانب البرج الاربعة.",
+    "poi.52": "شارع راسفيلدشتراسه هو احد الشوارع المركزية في كرويتسفيرتل وسمي نسبة الى الامير الاسقف راسفيلد. يتميز بمبان تاريخية من اواخر القرن التاسع عشر وبدايات القرن العشرين.",
+    "poi.53": "شارع راسفيلدشتراسه يتميز في ارقامه العليا بمزيج من المباني متعددة الطوابق والمنازل العائلية الى جانب المباني التاريخية.",
+    "poi.54": "شارع شولشتراسه يقع في كرويتسفيرتل. في الربيع تتفتح اشجار الكرز باللون الوردي وتشكل مشهدا جميلا للتصوير.",
+    "poi.55": "شارع شتودتشتراسه سمي على اسم كونراد فون شتودت الذي كان مواطنا فخريا لمدينة مونستر وشغل منصب رئيس اقليم ووزير تعليم.",
+    "poi.56": "سمي شارع لازاريتشتراسه عام 1875 نسبة الى المستشفى العسكري الذي كان يقع قرب نوتر. اليوم تعود المباني الى الفيلق الالماني الهولندي.",
+    "poi.57": "يمتد شارع كلايمانشتراسه بمحاذاة المتنزه على طول مرج اخضر يستخدم كثيرا كملعب للكلاب. سمي على اسم عضو المجلس البلدي ادولف كلايمان.",
+    "poi.58": "يعد مقهى روستبار في كرويتسفيرتل مقهى شهيرا. في الصيف يمكن الجلوس في الخارج والاستمتاع بالقهوة وكعكة.",
+    "poi.59": "برج بودنتورم هو اقدم جزء باق من تحصينات المدينة. بني في القرن الثاني عشر واستخدم كبرج دفاعي ثم كسجن ومستودع بارود.",
+    "poi.60": "مكتبة الكتب القديمة سولدر والمعروفة ايضا باسم مكتبة فيلسبرغ تصبح عدة مرات في السنة موقع تصوير لمسلسل فيلسبرغ.",
+    "poi.61": "فوز المانيا بسبعة اهداف مقابل واحد امام البرازيل عام 2014 كان اسطوريا. الاكثر غرابة ان رجلا في مونستر توقع النتيجة امام هذا المتجر.",
+    "poi.62": "في برنامج تلفزيوني محلي تم تصوير تقرير عن مراقبة الدراجات في مونستر وخاصة منع القيادة فوق ممر المشاة. هذا هو الممر المعني.",
+    "poi.63": "في حلقة تاتورت عام 2019 بعنوان الاب فروست تم التصوير في سوق عيد الميلاد قرب كنيسة سانت لامبرت.",
+    "poi.64": "مكان يتكرر ظهوره في مسلسل تاتورت مونستر وغالبا ما يتم اغلاقه اثناء التصوير.",
+    "poi.65": "في برنامج بارس فور رارس يمتلك التاجر دانيال ماير متجرا للتحف قرب المدينة القديمة في مونستر.",
+    "poi.66": "في عام 2024 اشتهر بركة قرب المتنزه بسبب لونها الاخضر الذي يشبه مشروب ماتشا.",
+    "poi.67": "حوالي عام 2006 ظهرت بجعة سوداء تدعى بيترا في بحيرة آسي. اشتهرت بعلاقتها الغريبة مع قارب على شكل بجعة.",
+    "poi.68": "قلعة توكسبورغ مبنى سكني من القرن التاسع عشر جميل وغامض قليلا.",
+    "poi.69": "عند النظر الاول تبدو ساحة بيكاسو عادية لكن احجار الرصف تشكل صورة بابلو بيكاسو.",
+    "poi.70": "تم تركيب سلم السماء من 2022 حتى ربيع 2024 ثم مرة اخرى في خريف 2024. يضيء السلم ايضا داخل الكنيسة.",
+    "poi.71": "بندول فوكو عمل فني لغرهارد ريختر تم تركيبه عام 2018 في كنيسة الدومينيكان ويجمع بين العلم والفن.",
+    "poi.72": "نهر آا يكون مخفيا احيانا في مونستر. بين شارع مينتس واغيديماركت يمكن الاستمتاع بمسار هادئ واخضر.",
+    "poi.73": "يقع مقهى 1648 في الطابق الحادي عشر من مبنى البلدية ويوفر اطلالة فريدة على مونستر.",
+    "poi.74": "استخدم المتنزه كموقع تصوير لمسلسل تاتورت لاول مرة عام 2007.",
+    "poi.75": "سوق برينتسيبال هو شارع تجاري تاريخي يعود للقرن الثاني عشر. دمرت معظم المباني في الحرب واعيد بناؤها بنفس الطراز.",
+    "poi.76": "اذا وقفت في المكان الصحيح امام المسرح قد يبدو المبنى كمرحاض مما يخلق خدعة بصرية طريفة.",
+    "poi.77": "كان رومبرغر هوف قصرا نبيلا. اليوم تقف انقاضه وشجرة قديمة في حديقة المسرح.",
+    "poi.78": "الكنيسة الرئيسية في كرويتسفيرتل هي كنيسة الصليب المقدس. بالقرب منها صناديق كهرباء مرسومة بصورة الكنيسة.",
+    "poi.79": "يوجد ملعب صغير قرب المتنزه مع جدار تسلق صغير تحرسه سنجاب لطيف.",
+    "poi.80": "سميت الساحة بساحة السلام الوستفالي عام 1998 وتقع خلف دار البلدية.",
+    "poi.81": "عرفت الساحة سابقا باسم نويبلاتس ثم هيندنبورغبلاتس وحاليا شلوسبلاتس. استخدمت عبر القرون كساحة فعاليات كبيرة.",
+    "poi.82": "كليمنس اوغست فون غالن كان اسقف مونستر وعرف بمعارضته الشجاعة للنازية.",
+    "poi.83": "قاطرة الانقاض تذكر بالدمار واعادة البناء بعد الحرب العالمية الثانية.",
+    "poi.84": "كنيسة سانت لودغيري من اقدم كنائس مونستر بنيت عام 1173 على الطراز الرومانسكي.",
+    "poi.85": "كنيسة سانت سيرفاتيي بنيت حوالي عام 1230 ودمرت في الحرب واعيد بناؤها عام 1947.",
+    "poi.86": "كنيسة سانت بيتر بنيت بين 1590 و1597 وكانت كنيسة كلية اليسوعيين.",
+    "poi.87": "كنيسة سانت مارتيني من اقدم كنائس مونستر واليوم هي اول كنيسة شبابية في الابرشية.",
+    "poi.88": "متحف الكتاب المقدس تابع لجامعة مونستر ويعرض تاريخ الكتاب المقدس باكثر من 1500 قطعة.",
+    "poi.89": "متحف مجاني يعرض تاريخ الارض وتكوينها والحفريات مع عناصر تفاعلية.",
+    "poi.90": "يقع هذا المتحف قرب الكاتدرائية داخل مبنى فورستنبرغهاوس.",
+    "poi.91": "افتتح متحف بيكاسو عام 2000 ويضم اكثر من 800 عمل فني.",
+    "poi.92": "برج مبنى البلدية بني بين 1902 و1907 ويضم اليوم بار برينتسي.",
+    "poi.93": "تقع كنيسة سانت اغيدي في مركز المدينة وبنيت عام 1725.",
+    "poi.94": "مبنى جيو واحد هو مبنى جامعي بني عام 2013 ويضم اقسام الجغرافيا والايكولوجيا الجغرافية ونظم المعلومات الجغرافية.",
+    "poi.95": "دير الكبوشيين افتتح عام 1862 ويوجد ممر يمر عبر حديقة الدير.",
+    "poi.96": "نصب تذكاري لاحراق الكتب في عهد النازية.",
+    "poi.97": "نصب تذكاري شيد عام 1925 لجنود فوج المشاة الثالث عشر.",
+    "poi.98": "مبنى من اواخر القرن التاسع عشر يستخدم اليوم كمؤسسة اسسها فيلهلم هوفر.",
+    "poi.99": "كان هذا مدخل حديقة الحيوان القديمة في مونستر.",
+    "poi.100": "بيت البومة هو احد المباني القليلة المتبقية من حديقة الحيوان القديمة.",
+    "poi.101": "كانت كنيسة الاوبزرفانتين كنيسة دير الفرنسيسكان. اليوم تستخدم ككنيسة جامعية وحفلات.",
+    "poi.102": "قصر الاسقف هو مقر اسقف مونستر وبني عام 1732.",
+    "poi.103": "منذ عام 2021 يوفر مبنى فندق اوبرفاسرهوف السابق شققا للطلاب.",
+    "poi.104": "بينكوس مولر مصنع جعة منذ عام 1866 وهو الوحيد المتبقي في مونستر.",
+    "poi.105": "مبنى من اوائل القرن العشرين تم انقاذه من الهدم ويستخدم اليوم كمطعم.",
+    "poi.106": "دافيدفاخة هو بار في بداية شارع يوديفيلدرشتراسه.",
+    "poi.107": "فرانتس فون فورستنبرغ كان سياسيا بارزا وادخل اصلاحات تعليمية.",
+    "poi.108": "حروف حمراء على واجهة مكتبة الجامعة تذكر بالاستخدام النقدي للمعلومات.",
+    "poi.109": "خريطة بارزة قرب القصر تظهر المدينة القديمة داخل الاسوار.",
+    "poi.110": "عمل فني مؤقت يظهر يدا تحمل قاربا زجاجيا مكسورا ويرمز للهجرة.",
+    "poi.111": "غرافيتي على صندوق كهرباء بين شارع رئيسي ومنطقة خضراء.",
+    "poi.112": "منطقة خضراء جميلة بين شارع مزدحم والمتنزه.",
+    "poi.113": "الجسر الذهبي يقع عند مصب نهر آا في بحيرة آسي.",
+    "poi.114": "منحوتة لانابيب عادم من صنع فريدريش غلازل عام 1971.",
+    "poi.115": "تمثال برونزي لهرقل ومخلوقات اسطورية صنع عام 1973.",
+    "poi.116": "مبنى ال بي اس يتميز بعمارة تجمع بين الطابع القديم والمستقبلي.",
+    "poi.117": "تمثال مادونا موجود منذ عام 1976 ومحاط بنافورة وسياج.",
+    "poi.118": "منحوتة برونزية من اعمال هنري مور تعود لعام 1968.",
+    "poi.119": "خريطة بارزة تظهر توزيع مباني الجامعة.",
+    "poi.120": "بار في شارع كوشتراسه يعرف باسم البيت الازرق وافتتح عام 1970.",
+    "poi.121": "منزلان بنيتا عام 1778 استخدما سابقا كنقطة حراسة وجمارك.",
+    "poi.122": "مجموعة منحوتات برونزية والومنيوم حول حوض ماء في مرج هادئ.",
+    "poi.123": "غرافيتي يظهر مبنى الزفينغر قرب المتنزه.",
+    "poi.124": "كنيسة لوتارينغر كورفراوين كنيسة باروكية تستخدم اليوم للزواج المدني.",
+    "poi.125": "نصب النسر في ساحة هورستر يخلد جنود الحرب العالمية الاولى.",
+    "poi.126": "نصب موريستتور التذكاري شيد عام 1909 لجنود حروب التوحيد.",
+    "poi.127": "وجه مرسوم على مدرسة يظهر يوهان كونراد شلاون.",
+    "poi.128": "فراشة ملونة مرسومة على جدار مدرسة شلاون.",
+    "poi.129": "خط مرسوم بالوان قوس قزح قرب الميناء يستخدمه الدراجون.",
+    "poi.130": "رصيف الميناء يتميز بمبان حديثة وقديمة مجددة ويستخدم للترفيه والعمل.",
+    "poi.131": "واجهة مقهى يونيك مزينة بغرافيتي جميل رغم اغلاق المقهى.",
+    "poi.132": "غرافيتي على باب مراب يظهر فتى ينظر الى معالم مونستر.",
+    "poi.133": "غرافيتي لفراشات وزهور على متجر خياطة اولو.",
+    "poi.134": "يمكن رؤية حروف سلام مونستر مزروعة بالزهور.",
+    "poi.135": "الكنيسة الرسولية الجديدة كنيسة مسيحية ليست كاثوليكية ولا بروتستانتية.",
+    "poi.136": "كلية مهنية يعكس مبناها اسلوب يوهان كونراد شلاون.",
+    "poi.137": "بيسبينغهوف كان مزرعة اصلية للمدينة ويستخدم اليوم لدورات لغوية.",
+    "poi.138": "مبنى محكمة المنطقة بني بين 1875 و1879 واعيد بناؤه بعد الحرب.",
+    "poi.139": "الساعة الفلكية في كاتدرائية مونستر بنيت بين 1540 و1542 وتظهر حركة الاجرام السماوية.",
+
+  
+    "route.1": "انغمس في تاريخ مونستر. تاخذك هذه الجولة الى مبان قديمة واماكن تاريخية من عصور مختلفة، وهي مثالية لاكتشاف المدينة وماضيها.",
+    "route.2": "السفر المستدام في مونستر. تعرض هذه الجولة متاجر واماكن مختارة تركز على التجارة العادلة والاستدامة. مثالية لمن يهتم بالبيئة والمسؤولية.",
+    "route.3": "اعمال فنية وغرافيتي. تساعدك هذه الجولة على اكتشاف الفن الذي قد يمر دون ملاحظة في الحياة اليومية وتعرض مونستر من جانبها الابداعي.",
+    "route.4": "هل تهتم بالعمارة؟ تجمع هذه الجولة بين المباني التاريخية والعمارة الحديثة وتوضح كيف شكلت العصور المختلفة مشهد مدينة مونستر.",
+    "route.5": "حي نابض بالحياة. يجمع كرويتسفيرتل بين ثقافة السكن والتاريخ والعمارة. تعرض هذه الجولة شوارع واماكن تميز طابع الحي.",
+    "route.6": "سواء كان موقع تصوير جريمة او ميم على الانترنت، تاخذك هذه الجولة الى اماكن سلطت الاضواء الاعلامية على مونستر وكذلك الى مواقع مخفية خلف الصور ومقاطع الفيديو.",
+    "route.7": "هل تعتقد انك تعرف مونستر جيدا؟ تعرض هذه الجولة اماكن خاصة لا يعرفها حتى الكثير من خبراء مونستر. هل انت فضولي؟"
 
 
 }
