fixed bug in language file + added achievment data

--- a/muensterdiscovery/src/i18n/nl.json
+++ b/muensterdiscovery/src/i18n/nl.json
@@ -290,7 +290,7 @@
     "route.4": "Ben je geïnteresseerd in architectuur? Deze route combineert historische gebouwen met moderne architectuur en toont je hoe verschillende tijdperken het stadsbeeld van Münster hebben gevormd.",
     "route.5": "Populair en levendig: de Kreuzviertel-wijk combineert wooncultuur en geschiedenis evenals architectuur. Deze route toont je bijzondere straten en plaatsen die het karakter van de wijk bepalen.",
     "route.6": "Of het nu een misdaadscène-achtergrond is of een internetmeme - deze route brengt je naar de plaatsen die Münster in de media-aandacht hebben gebracht of de verborgen locaties achter mediafoto's en -video's.",
-    "route.7": "Ken je Münster al van binnen en van buiten? Deze route toont je bijzondere plaatsen waar zelfs veel Münster-experts niet van op de hoogte zijn. Nieuwsgierig?",
+    "route.7": "Ken je Münster al van binnen en van buiten? Deze route toont je bijzondere plaatsen waar zelfs veel Münster-experts niet van op de hoogte zijn. Nieuwsgierig?"
 
 
 }
