--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -218,11 +218,11 @@
     "poi.48": "Das Theater Münster wurde am 4. Februar 1956 als erster großer Theaterneubau im Nachkriegsdeutschland eröffnet und gilt international als wichtiges Beispiel moderner Architektur. Seine Wurzeln reichen bis 1774 zurück, als Münsters erstes Theater, das Komödienhaus, erbaut wurde. 1971 kam eine zweite Spielstätte hinzu, das Kleine Haus.",
     "poi.49": "Der Zwinger wurde im 16. Jahrhundert als Bollwerk und Turm zum Schutz der Stadtbefestigung erbaut. Trotz bewaffneter Konflikte stehen seine Mauern bis heute. In seiner 500-jährigen Geschichte diente er nicht nur als Befestigung, sondern auch als Gefängnis, Pferdemühle, Malerstudio und Kulturzentrum der Hitlerjugend. 1997 wurden die Ruinen zu einer Gedenkstätte für Opfer von Gewalt umgestaltet. In den Sommermonaten kann man das Innere für wenige Euro besichtigen.",
     
-    "poi.50": "Das Kino Schloßtheater wurde 1953 erbaut und ist ein denkmalgeschütztes Gebäude. Es beherbergt Deutschlands ersten Filmclub und wurde 1995 im Stil der Theater der 1920er Jahre renoviert. Heute konzentriert sich das Kino auf europäische Arthousfilme und veranstaltet besondere Events und Festivals.",
+    "poi.50": "Das Kino Schloßtheater wurde 1953 erbaut und ist ein denkmalgeschütztes Gebäude. Es beherbergt Deutschlands ersten Filmclub und wurde 1995 im Stil der Theater der 1920er Jahre renoviert. Heute konzentriert sich das Kino auf europäische Arthousefilme und veranstaltet besondere Events und Festivals.",
     "poi.51": "Im Herzen des Kreuzviertels befindet sich die Heilig-Kreuz-Kirche, die zwischen 1899 und 1902 erbaut wurde. Eine interessante Besonderheit ist die Installation mit den Worten „Ja, ich bin da” auf den vier Seiten des Turms.",
     "poi.52": "Die Raesfeldstraße ist eine der zentralen Straßen im Kreuzviertel. Sie erhielt ihren Namen nach Fürstbischof Raesfeld, der von 1557 bis 1566 regierte. Die Straße ist geprägt von denkmalgeschützten Gebäuden aus dem späten 19. und frühen 20. Jahrhundert.",
     "poi.53": "Die Raesfeldstraße ist eine der zentralen Straßen im Kreuzviertel und ist nach Fürstbischof Raesfeld benannt. In den höheren Hausnummern findet man eine Mischung aus mehrgeschossigen Gebäuden sowie Einfamilienhäusern neben denkmalgeschützten Gebäuden aus dem späten 19. und frühen 20. Jahrhundert.",
-    "poi.54": "Die Schulstraße ist eine der Straßen im Kreuzviertel. Im Frühling blühen die Kirschbäume rosa und schaffen in Kombination mit der umgebenden Architektur ein wunderschönes Fotomotiv.",
+    "poi.54": "Die Schulstraße ist eine Straße im Kreuzviertel. Im Frühling blühen die Kirschbäume rosa und schaffen in Kombination mit der umgebenden Architektur ein wunderschönes Fotomotiv.",
     "poi.55": "Die Studtstraße ist eine Straße im Kreuzviertel, benannt nach Dr. Conrad von Studt, der Ehrenbürger der Stadt Münster war und Ende des 19. Jahrhunderts als Oberpräsident und Kultusminister von Westfalen tätig war.",
     "poi.56": "Die Lazarettstraße wurde 1875 nach dem Standortlazarett (Militärkrankenhaus) benannt, das sich damals bereits am Neutor befand. Die Straße verläuft nördlich um den damaligen Krankenhauskomplex. Heute gehören die Gebäude zum Deutsch-Niederländischen Korps.",
     "poi.57": "Die Kleimannstraße verläuft parallel zur Promenade entlang einer grünen Wiese, die oft als Hundespielplatz dient. Die Straße wurde 1900 nach dem Stadtrat Adolf Kleimann (1825–1911) benannt, der unter anderem die Kreuzschanze als Teil der Promenade baute.",
@@ -231,7 +231,7 @@
     
     "poi.60": "Das ‚Antiquariat Solder', auch bekannt als Antiquariat Wilsberg, ist ein normales Antiquariat in Münster. Mehrmals im Jahr wird es zum Drehort für die deutsche TV-Serie ‚Wilsberg'.",
     "poi.61": "Der 7:1-Sieg Deutschlands gegen Brasilien im Halbfinale der WM 2014 war legendär. Noch unglaublicher war ein Mann in Münster, der genau dieses Ergebnis vor diesem REWE-Supermarkt vorhergesagt hatte.",
-    "poi.62": "In einer lokalen TV-Sendung gab es ein kurzes Video über Fahrradkontrollen in der Stadt Münster, insbesondere das verbotene Fahren auf einem Zebrastreifen. Besonders ein Mann, der sein Verhalten diskutierte und sogar mit seinem Laptop und einigen Recherchen zurückkam, um sein Recht zu beweisen. Es war genau dieser Zebrastreifen.",
+    "poi.62": "In einer lokalen TV-Sendung gab es ein kurzes Video über Fahrradkontrollen in der Stadt Münster, insbesondere das verbotene Fahren auf einem Zebrastreifen. Besondere Aufmerksamkeit erlangte ein Mann, der sein Verhalten diskutierte und sogar mit seinem Laptop und einigen Recherchen zurückkam, um sein Recht zu beweisen. Es war genau dieser Zebrastreifen.",
     "poi.63": "Für die Tatort-Folge ‚Väterchen Frost' von 2019 durften die Schauspieler auf dem Weihnachtsmarkt an der Lambertikirche drehen.",
     "poi.64": "Eine wiederkehrende Szene im „Tatort Münster”. Wenn ein neuer „Tatort” produziert wird, ist dieser Ort oft für Minuten oder Stunden wegen Dreharbeiten gesperrt.",
     "poi.65": "In der beliebten deutschen TV-Show ‚Bares für Rares' besitzt einer der Händler, Daniel Meyer, ein Antiquitätengeschäft in der Nähe der Münsteraner Altstadt. Es verbindet die Sendung mit einem realen Ort in der Stadt.",
@@ -262,7 +262,7 @@
     "poi.88": "Das Bibelmuseum, das zur Universität Münster gehört, wurde 1997 gegründet. Es veranschaulicht die Geschichte der Bibel mit über 1500 Exponaten, von ihren handschriftlichen Anfängen bis zur Gegenwart.",
     "poi.89": "Ein interessantes und kostenloses Museum mit Ausstellungen über die Geschichte der Erde, ihre Zusammensetzung und Fossilien. Dieses Museum enthält interaktive Elemente und ist ein schöner Ort, um etwas über unsere Erde zu lernen.",
     
-    "poi.90": "Dieses Museum befindet sich in der Nähe des Doms und im Fürstenberghaus. Die erste archäologische Sammlung stammt aus dem Jahr 1883, wurde aber im Krieg zerstört. Seit 1958 wird das Museum wieder aufgebaut und eine neue Sammlung zusammengestellt.",
+    "poi.90": "Dieses Museum befindet sich in der Nähe des Doms und im Fürstenberghaus. Die erste archäologische Sammlung stammt aus dem Jahr 1883, wurde aber im Krieg zerstört. Ab 1958 wurde das Museum wieder aufgebaut und eine neue Sammlung zusammengestellt.",
     "poi.91": "Dieses Museum wurde im Jahr 2000 eröffnet und beherbergt Lithografien und andere Bestände in verschiedenen künstlerischen Techniken aus verschiedenen Schaffensperioden von Pablo Picasso. Es gibt über 800 Exponate.",
     "poi.92": "Der Stadthausturm wurde zwischen 1902 und 1907 als Teil der Stadtverwaltung erbaut. Er überlebte den Zweiten Weltkrieg und beherbergt heute die Prinzi-Bar.",
     "poi.93": "Die Kirche St. Aegidii befindet sich im Stadtzentrum von Münster. Die Kirche wurde 1725 erbaut. Nach dem Ende des Zweiten Weltkriegs, den die Kirche relativ unbeschadet überstand, wurde die Deckenmalerei vorübergehend übermalt, aber 1983 wieder freigelegt.",
@@ -281,7 +281,7 @@
     "poi.105": "Das Gebäude stammt aus dem frühen 20. Jahrhundert und sollte 1973 abgerissen werden. Es wurde jedoch besetzt und vor dem Abriss gerettet. Zudem war es eine der ersten Hausbesetzungen im Nachkriegsdeutschland. Heute wird es als Restaurant mit gelegentlichen kulturellen Veranstaltungen genutzt.",
     "poi.106": "Die Davidwache ist eine Bar, benannt nach der legendären Polizeiwache in Hamburg. Diese Bar ist der Anfang der Jüdefelderstraße, einer beliebten Partystraße in Münster, besonders mittwochs und freitags.",
     "poi.107": "Franz von Fürstenberg wurde 1729 in Arnsberg geboren. Er war ein prominenter Politiker in der zweiten Hälfte des 18. Jahrhunderts. Er führte Reformen im Schulwesen ein, zum Beispiel die Einführung der Schulpflicht.",
-    "poi.108": "Dieser rote Schriftzug ist an der Glasfassade der Universitätsbibliothek angebracht. Er ist dort seit den Renovierungsarbeiten 2009 und wurde von Babak Saed geschaffen. Seine Absicht ist es, an den kritischen Umgang mit Informationen zu erinnern. Auch seine Platzierung an der Ecke ist interessant, da er nicht leicht zu sehen ist. Es gibt immer einen „Bruch”.",
+    "poi.108": "Dieser rote Schriftzug ist an der Glasfassade der Universitätsbibliothek angebracht. Er ist seit den Renovierungsarbeiten 2009 dort und wurde von Babak Saed geschaffen. Seine Absicht ist es, an den kritischen Umgang mit Informationen zu erinnern. Auch seine Platzierung an der Ecke ist interessant, da er nicht so einfach auf einen Blick zu sehen ist. Es gibt immer einen „Bruch”.",
     "poi.109": "Diese Reliefkarte in der Nähe des Schlosses zeigt eine Karte der Innenstadt von Münster innerhalb der ehemaligen Stadtmauern, die heute die Promenade bilden.",
     
     "poi.110": "Zwischen Universitätsgebäuden ist diese Kunst zu finden. Sie ist temporär installiert und wird nur bis 2026 bestehen. Diese Hand hält ein zerbrochenes Boot aus Glas und ist eine Erinnerung an Migration.",
@@ -304,7 +304,7 @@
     "poi.126": "Das Kriegerdenkmal am Mauritztor wurde 1909 eingeweiht und ist ein Denkmal für die gefallenen Münsteraner Soldaten der Einigungskriege von 1864, 1866 und 1870/71. Es wurde als monumentales Siegerdenkmal konzipiert und sollte Einheit, Patriotismus und nationale Zusammengehörigkeit ausdrücken.",
     "poi.127": "An einem Gymnasium ist dieses Gesicht an die Außenwände des Gebäudes gemalt. Das Gesicht zeigt Dr. Johann Conrad Schlaun, der dieser Schule ihren Namen gibt. Johann Conrad Schlaun war der Baumeister des Fürstbischofs und schuf viele Gebäude in der Stadt, z.B. das Schloss in Münster, den Erbdrostenhof oder viele Kirchen. Wenn man sich umdreht, kann man auch ein Restaurant namens „Johann Conrad” finden.",
     "poi.128": "An einer der Wände des Schlaun-Gymnasiums, einem Gymnasium, ist dieser Schmetterling in Farben gemalt.",
-    "poi.129": "Zwischen dem Kino Cineplex und dem Beginn der Hafenpromenade findet man diese in Regenbogenfarben bemalte Linie. Sie durchquert den freien Platz diagonal und wird oft von Radfahrern genutzt.",
+    "poi.129": "Zwischen dem Kino Cineplex und dem Beginn der Hafenpromenade findet man diese in Regenbogenfarben gemalte Linie. Sie durchquert den freien Platz diagonal und wird oft von Radfahrern genutzt.",
    
     "poi.130": "Die Hafenpromenade ist geprägt von modernen Gebäuden aus der Hafenrenovierung vor einigen Jahren. Man findet aber auch alte und renovierte Hafengebäude. Der Raum wird für Büros, Restaurants, Bars und Kunstraüme sowie als Erholungsraum mit Spazierwegen und Sitzbereichen genutzt.",
     "poi.131": "Die Fassade des Café Unique wurde kürzlich mit schönem Graffiti dekoriert. Das Café ist jedoch leider dauerhaft geschlossen.",
@@ -317,13 +317,13 @@
     "poi.138": "Das Amtsgerichtsgebäude wurde zwischen 1875 und 1879 erbaut und befindet sich südlich des Schlossplatzes. Es wurde im Krieg weitgehend zerstört und danach wieder aufgebaut.",
     "poi.139": "Die Astronomische Uhr im Paulusdom wurde zwischen 1540 und 1542 gebaut. Sie zeigt nicht nur die Zeit, sondern auch die Bewegungen von Sonne, Mond, Planeten und Tierkreiszeichen nach dem geozentrischen Weltbild.",
 
-    "route.1": "Tauchen Sie ein in die Geschichte Münsters! Diese Route führt Sie zu alten Gebäuden und historischen Stätten aus verschiedenen Epochen – perfekt für Sie, wenn Sie die Stadt und ihre Vergangenheit entdecken möchten!",
-    "route.2": "Nachhaltig unterwegs in Münster: Diese Route zeigt Ihnen ausgewählte Geschäfte und Orte, die auf fairen Handel und Nachhaltigkeit setzen. Ideal für Sie, wenn Ihnen Umwelt, Verantwortung und Nachhaltigkeit wichtig sind.",
-    "route.3": "Kunstobjekte und Graffiti – diese Route hilft Ihnen, Kunst zu entdecken, die im Alltag leicht übersehen wird, und zeigt Ihnen Münster von seiner kreativen Seite.",
-    "route.4": "Interessieren Sie sich für Architektur? Diese Route verbindet historische Gebäude mit moderner Architektur und zeigt Ihnen, wie verschiedene Epochen das Stadtbild Münsters geprägt haben.",
-    "route.5": "Beliebt und lebendig: Das Kreuzviertel vereint Wohnkultur und Geschichte sowie Architektur. Diese Route zeigt Ihnen besondere Straßen und Orte, die den Charakter des Viertels prägen.",
-    "route.6": "Ob Tatort-Kulisse oder Internet-Meme – diese Route führt Sie zu den Orten, die Münster ins mediale Rampenlicht gerückt haben, oder zu den versteckten Schauplätzen hinter Medienfotos und -videos.",
-    "route.7": "Kennen Sie Münster schon in- und auswendig? Diese Route zeigt Ihnen besondere Orte, von denen selbst viele Münster-Kenner nichts wissen. Neugierig?"
+    "route.1": "Tauch ein in die Geschichte Münsters! Diese Route führt Dich zu alten Gebäuden und historischen Orten aus verschiedenen Epochen – perfekt für Dich, wenn du die Stadt und ihre Vergangenheit entdecken möchtest!",
+    "route.2": "Nachhaltig unterwegs in Münster: Diese Route zeigt Dir ausgewählte Geschäfte und Orte, die auf fairen Handel und Nachhaltigkeit setzen. Ideal für Dich, wenn Dir Umwelt, Verantwortung und Nachhaltigkeit wichtig sind.",
+    "route.3": "Kunstobjekte und Graffiti – diese Route hilft Dir, Kunst zu entdecken, die im Alltag leicht übersehen wird, und zeigt Dir Münster von seiner kreativen Seite.",
+    "route.4": "Interessierst Du dich für Architektur? Diese Route verbindet historische Gebäude mit moderner Architektur und zeigt Dir, wie verschiedene Epochen das Stadtbild Münsters geprägt haben.",
+    "route.5": "Beliebt und lebendig: Das Kreuzviertel vereint Wohnkultur und Geschichte sowie Architektur. Diese Route zeigt Dir besondere Straßen und Orte, die den Charakter des Viertels prägen.",
+    "route.6": "Ob Tatort-Kulisse oder Internet-Meme – diese Route führt Dich zu den Orten, die Münster ins mediale Rampenlicht gerückt haben, oder zu den versteckten Schauplätzen hinter Medienfotos und -videos.",
+    "route.7": "Kennst Du Münster schon in- und auswendig? Diese Route zeigt Dir besondere Orte, von denen selbst viele Münster-Kenner nichts wissen. Neugierig?"
 
 
 }
