--- a/muensterdiscovery/src/i18n/jp.json
+++ b/muensterdiscovery/src/i18n/jp.json
@@ -147,7 +147,7 @@
 
     "poi.1": "城はミュンスターにある建物群です。建物はU字型に建てられています。城の前には前庭があり、後ろにはミュンスター植物園があります。城はミュンスター大学の行政建物として使用され、講義室やセミナールームがあります。",
     "poi.2": "ウーバーワッサー教会はその所在地にちなんで名付けられました。聖パウロ大聖堂から見ると、この教会に行くには“水”（Aa川）を渡る必要があります。ウーバーワッサー教会は最古の教会の一つで、9世紀末には前身の建物が存在していました。現在の形になったのは15世紀ですが、第二次世界大戦で破壊された後、広範囲にわたり修復されました。",
-    "poi.3": "ドム広場は聖パウロ大聖堂の前にある広場です。1916年まで、年に三回センドフェアがここで開催され、その後シュロス広場に移動しました。現在は毎週水曜と金曜に市場が開かれ、新鮮な食材や花などが販売されています。",
+    "poi.3": "ドム広場は聖パウロ大聖堂の前にある広場です。1916年まで、年に三回センドフェアがここで開催され、その後シュロス広場に移動しました。現在は毎週水曜と土曜に市場が開かれ、新鮮な食材や花などが販売されています。",
     "poi.4": "聖パウロ大聖堂はミュンスター教区の母教会で、13世紀に建てられました。大聖堂には身廊と側廊があり、多くの芸術作品も建物内にあります。",
     "poi.6": "キーペンケルは田舎と都市の間で日用品を“キーペ”（背負いかご）で運ぶ小さな商人でした。現在、キーペンケルはミュンスターと周辺地域の伝統的な象徴となっています。",
     "poi.7": "ライ麦市場（ローゲンマルクト）はプリンツィパルマルクトにあり、旧魚市場とともにミュンスターで最も古い市場の一つです。ライ麦の取引にちなんで名付けられました。ローゲンマルクトには多くの歴史的商家がありましたが、ほとんどは第二次世界大戦で完全に破壊されました。写真の建物は精巧な装飾とシャッターでオリジナルのファサードを確認できます。",
