fixed bug in language file

--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -66,6 +66,7 @@
     "leaderboard.points": "Punkte",
     "leaderboard.loading": "Lade Daten",
     "leaderboard.no_data": "Noch keine Daten verfügbar",
+    "leaderboard.km": "Routenkilometer",
 
     "registration.title": "Konto erstellen",
     "registration.firstname": "Vorname",
